--- a/src/assets/scss/paper-kit/_typography.scss
+++ b/src/assets/scss/paper-kit/_typography.scss
@@ -24,6 +24,8 @@ textarea {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   font-family: $font-family-sans-serif;
+  font-family: $font-family-zwizz;
+  font-family: $font-family-aileron;
   font-weight: $font-weight-light;
 }
 
@@ -35,6 +37,7 @@ h3,
 .h3,
 h4,
 .h4 {
+  font-family: $font-family-zwizz;
   margin: $margin-large-vertical 0 0;
 }
 h1,
