--- a/src/assets/scss/paper-kit/_variables.scss
+++ b/src/assets/scss/paper-kit/_variables.scss
@@ -1,6 +1,24 @@
+@font-face {
+  font-family: "Zwizz Regular";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Zwizz Regular"),
+    url("../fonts/Zwizz/Zwizz-Regular.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Aileron Regular";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Aileron Regular"),
+    url("../fonts/Aileron/Aileron-Regular.woff") format("woff");
+}
+
 $font-color: #66615b !default;
 $fill-font-color: rgba(255, 255, 255, 0.8);
-$font-family-sans-serif: "Montserrat", "Helvetica", Arial, sans-serif;
+$font-family-sans-serif: "Helvetica", Arial, sans-serif;
+$font-family-zwizz: "Zwizz Regular", Arial, sans-serif;
+$font-family-aileron: "Aileron Regular", Arial, sans-serif;
 
 $none: 0 !default;
 $border-thin: 1px !default;
