Style checkout in desktop

--- a/src/assets/scss/paper-kit/_variables.scss
+++ b/src/assets/scss/paper-kit/_variables.scss
@@ -154,7 +154,7 @@ $font-size-h2: 2.8em !default;
 $font-size-h3: 1.82em !default;
 $font-size-h4: 1.6em !default;
 $font-size-h5: 1.5em !default;
-$font-size-h6: 0.9em !default;
+$font-size-h6: 12px !default;
 $font-paragraph: 17px !default;
 $font-size-navbar: 14px !default;
 
