--- a/src/assets/scss/paper-kit/_typography.scss
+++ b/src/assets/scss/paper-kit/_typography.scss
@@ -82,8 +82,8 @@ h5,
 h6,
 .h6 {
   font-size: $font-size-h6;
-  font-weight: $font-weight-bold;
-  line-height: 1.5em;
+  // font-weight: $font-weight-bold;
+  // line-height: 1.5em;
   font-weight: normal;
 }
 p {
